--- a/src/utils/css/style.css
+++ b/src/utils/css/style.css
@@ -1,3 +1,18 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 #content {
   background: url("../images/dining.jpg");
+  width: auto;
+  height: 100vh;
+}
+
+.nav-links {
+  /*text-align: center;*/
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
