--- a/src/utils/css/style.css
+++ b/src/utils/css/style.css
@@ -11,8 +11,29 @@
 }
 
 .nav-links {
-  /*text-align: center;*/
   list-style: none;
   display: flex;
   justify-content: center;
+  position: relative;
+  top: 8px;
+}
+
+nav {
+  background-color: #000;
+  padding: 5px 0;
+}
+
+.menu {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+form {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.form-floating {
+  width: 70%;
+  margin: 0 auto;
 }
