--- a/src/utils/css/style.css
+++ b/src/utils/css/style.css
@@ -8,19 +8,26 @@
   background: url("../images/dining.jpg");
   width: auto;
   height: 100vh;
+  display: grid;
+  grid-template-columns: 20% 80%;
 }
 
 .nav-links {
   list-style: none;
-  display: flex;
-  justify-content: center;
   position: relative;
   top: 8px;
+}
+
+.nav-links a {
+  color: #fff;
+  list-style: none;
+  text-decoration: none;
 }
 
 nav {
   background-color: #000;
   padding: 5px 0;
+  height: 100vh;
 }
 
 .menu {
